<resources>
    <string name="app_name">라-이터</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">회원가입</string>
    <string name="signup_description">회원가입하고 라-이터를 이용해보세요</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="signup_done">가입 완료</string>
    <string name="login">로그인</string>
    <string name="logout">로그 아웃</string>
    <string name="signout">회원 탈퇴</string>
    <string name="kakaologin">혹시 나도? \n확인하고 싶을 땐,\n라-이터</string>
    <string name="kakaotext">카카오 계정 연동으로 시작해보세요!</string>
    <string name="googletext">구글 계정 연동으로 시작해보세요!</string>
    <string name="intro">라-이터에 오신 걸 \n환영합니다!</string>
    <string name="upload">채팅 등록</string>
    <string name="info">정보</string>
    <string name="info_tv_1">라-이터 만의\n솔루션</string>
    <string name="mypage">마이페이지</string>
    <string name="mypage_description">지난 기록을 확인해볼 수 있어요!</string>
    <string name="mypage_list">지난 분석 확인</string>
    <string name="analysis_title">라-이터\n분석 결과</string>
    <string name="analysis_subtitle">대화 내용을 기반으로 알려드립니다.</string>
    <string name="question">질문</string>
    <string name="count_label">%d / %d</string>
    <string name="submit">%s</string>
    <string name="result">자가진단 테스트 완료!</string>
    <string name="result_tv">테스트 결과는 채팅 분석 결과와 함께 제공됩니다.</string>
    <string name="toMain">라-이터 시작하기</string>
    <string name="start_tv0">먼저 확인해볼까요?\n가스라이팅 자가진단</string>
    <string name="start_tv1">자가진단 테스트를 통해 자신의 성향을 알아보세요.\n채팅 분석 결과에 테스트 결과가 나타납니다.</string>
    <string name="card_tv1">솔루션이 보이지 않는다면?</string>
    <string name="card_tv2">채팅 등록 시 라-이터만의\n맞춤 솔루션을 제공해드려요!</string>

    <string name="relation">관계 설정</string>
    <string name="relation_description">채팅 상대와의 관계를 설정해 주세요.\n관계를 기반으로 맞춤 솔루션을 제공해 드립니다.</string>
    <string name="btn_ok">확인</string>
    <string name="type_title">나의 유형은?</string>
    <string name="type_subtitle">자가 진단 테스트 결과를 확인하세요.</string>
    <string name="avoid_score">회피 점수</string>
    <string name="anxiety_score">불안 점수</string>
    <string name="btn_upload">채팅 분석</string>
    <string name="upload_title">채팅을 등록해 주세요</string>
    <string name="upload_photo_subtitle">분석하고 싶은 채팅 사진을 불러와주세요.</string>
    <string name="upload_file_subtitle">분석하고 싶은 채팅 파일을 불러와주세요.</string>

    <string name="delete">삭제하시겠습니까?</string>
    <string name="delete_description">삭제 시, 해당 분석 결과를 확인 할 수 없습니다.</string>

</resources>