<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".TestResultActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_test_result"
        android:gravity="center"
        android:paddingTop="210dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        style="@style/TextAppearance.AppCompat.Headline.H1"
        android:text="@string/result"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_1"
        style="@style/TextAppearance.AppCompat.Body.S"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result_tv"
        android:gravity="center"
        android:textColor="@color/neutral_dark_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_0" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMain"
        android:textColor="@color/white"
        style="@style/TextAppearance.AppCompat.Action.M"
        android:background="@drawable/test_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>