<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.ui.MyPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mypage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/highlight_darkest"
        android:elevation="2dp"
        android:paddingTop="19dp"
        android:paddingBottom="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_mypage"
            style="@style/TextAppearance.AppCompat.Headline.H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage"
            android:textColor="@color/neutral_dark_darkest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_mypage_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_mypage">

        <TextView
            android:id="@+id/tv_nickname"
            style="@style/TextAppearance.AppCompat.Headline.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="반가워요,\n라-이터 님" />

        <TextView
            android:id="@+id/tv_mypage_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/mypage_description"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/TextAppearance.AppCompat.Caption.M"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_round_button"
            android:backgroundTint="@color/highlight_lightest"
            android:text="@string/logout"
            android:textColor="@color/highlight_darkest"
            app:layout_constraintStart_toStartOf="@id/tv_mypage_description"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_description"
            app:layout_constraintWidth_percent="0.16" />

        <Button
            android:id="@+id/btn_signout"
            style="@style/TextAppearance.AppCompat.Caption.M"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_round_button"
            android:backgroundTint="@color/highlight_lightest"
            android:text="@string/signout"
            android:textColor="@color/highlight_darkest"
            app:layout_constraintStart_toEndOf="@id/btn_logout"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_description"
            app:layout_constraintWidth_percent="0.16" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="-4dp"
            android:src="@drawable/img_mypage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_logout">

            <TextView
                android:id="@+id/tv_result_list"
                style="@style/TextAppearance.AppCompat.Headline.H4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/mypage_list"
                android:textColor="@color/neutral_dark_darkest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/neutral_dark_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>