<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadFileFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/neutral_dark_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_round_upload_button"
            android:elevation="2dp"
            android:padding="34dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_file"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_file"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_file_name"
            style="@style/TextAppearance.AppCompat.Body.M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/neutral_dark_light"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_file" />

        <TextView
            android:id="@+id/tv_explain1"
            style="@style/TextAppearance.AppCompat.Headline.H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/upload_title"
            android:textColor="@color/neutral_dark_darkest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_upload" />

        <TextView
            android:id="@+id/tv_explain2"
            style="@style/TextAppearance.AppCompat.Body.M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/upload_file_subtitle"
            android:textColor="@color/neutral_dark_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explain1" />

        <Button
            android:id="@+id/btn_analysis"
            style="@style/TextAppearance.AppCompat.Action.M"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/shape_round_button"
            android:backgroundTint="@color/highlight_darkest"
            android:stateListAnimator="@null"
            android:text="@string/btn_upload"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explain2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>